--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,9 @@ ipython_config.py
 .pdm-build/
 
 # pixi
+
+# Local MCP smoke-test temp files
+tmp_akshare_*.json
 #   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
 #pixi.lock
 #   Pixi creates a virtual environment in the .pixi directory, just like venv module creates one
@@ -205,3 +208,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# personal
+*.csv
+output/
+temp_cache/
